--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
-jekyll-theme-cayman
-title:welcome to Anurag's Homepage
-description:yayy
+name: Anurag Bhatatcharyya, PhD Candidate
+markdown: kramdown
