--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-name: Anurag Bhatatcharyya, PhD Candidate
+name: Anurag Bhattacharyya, PhD Candidate
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
